Fix editor alignment issues (#1897)
There were a couple of heading blocks and blockquote blocks that
did not align with the rest of the text in the editor.

Added rem to a couple of the calculations and change the
blockquotes to have a left/right margin of auto.

Fixes #1320

--- a/assets/css/base/gutenberg-blocks.scss
+++ b/assets/css/base/gutenberg-blocks.scss
@@ -301,7 +301,7 @@
 
 	// Blockquote
 	.wp-block-quote {
-		margin: 0 0 ms(2);
+		margin-bottom: ms(2);
 		padding: 0 0 0 1em;
 
 		&.is-large,
